infrastructure/workspace/workspace-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: workspace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: workspace
  template:
    metadata:
      labels:
        app: workspace
    spec:
      securityContext:
        fsGroup: 1111
      runtimeClassName: nvidia
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: nvidia.com/gpu.present
                operator: Exists
      tolerations:
      - effect: NoSchedule
        key: node.mmontes.io/type
        value: compute-xlarge
      containers:
        - name: workspace
          image: ghcr.io/mmontes11/ai-workspace:0.1.0
          resources:
            requests:
              cpu: "1"
              memory: "2Gi"
            limits:
              memory: "8Gi"
              nvidia.com/gpu: 1
          ports:
            - containerPort: 4096
          volumeMounts:
            - name: home-storage
              mountPath: /home/mmontes
      volumes:
        - name: home-storage
          persistentVolumeClaim:
            claimName: workspace
