infrastructure/workspace/workspace-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: workspace
spec:
  serviceName: "workspace"
  replicas: 1
  selector:
    matchLabels:
      app: workspace
  template:
    metadata:
      labels:
        app: workspace
    spec:
      securityContext:
        fsGroup: 1111
      runtimeClassName: nvidia
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: nvidia.com/gpu.present
                operator: Exists
      tolerations:
      - effect: NoSchedule
        key: node.mmontes.io/type
        value: compute-xlarge
    
      containers:
        - name: workspace
          image: ghcr.io/mmontes11/ai-workspace:ee46d1d
          resources:
            requests:
              cpu: "1"
              memory: "2Gi"
            limits:
              nvidia.com/gpu: "1"
          ports:
            - containerPort: 4096
          volumeMounts:
            - name: home-storage
              mountPath: /home/mmontes
  volumeClaimTemplates:
    - metadata:
        name: home-storage
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: "topolvm"
        resources:
          requests:
            storage: 100Gi
