infrastructure/workspace/workspace-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: workspace
spec:
  selector:
    app: workspace
  ports:
    - protocol: TCP
      port: 4096
      targetPort: 4096
